Fix overflowing header
I removed the s6 columns from index and added responsive
font sizes in style.

Fixes https://github.com/coala/devops/issues/75

--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 /* Custom CSS for Devops Heading */
 
+
+.title {
+  font-size: 8em;
+}
+
 .devops-subtitle {
   text-transform: uppercase;
   letter-spacing: 1.5em;
   text-align: center;
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 500;
   text-indent: 1.8em;
   text-align: 1em;
@@ -18,4 +23,14 @@
 
 .ops-text {
   color: darkslategrey;
+}
+
+@media(min-width: 1200px) {
+  .title {
+    font-size: 14em;
+  }
+
+  .devops-subtitle {
+    font-size: 2em;
+  }
 }
